# uhc

./: .gitignore  .travis.yml  ANNOUNCE  ANNOUNCE-1.1.0  EHAbsSyn.ag  EHAbsSyn.cag  EHC.chs  EHCnstr.chs  EHCode.cag  EHCodeAbsSyn.cag  EHCodeGrin.cag  EHCodeJava.cag  EHCodePretty.cag  EHCodeSubst.cag  EHCommon.chs  EHCore.cag  EHCoreAbsSyn.cag  EHCoreCommonLev.cag  EHCoreGrin.cag  EHCoreJava.cag  EHCorePretty.cag  EHCoreSubst.cag  EHCoreTrfCommonFv.cag  EHCoreTrfCommonLev.cag  EHCoreTrfConstProp.cag  EHCoreTrfFullLazy.cag  EHCoreTrfInlineLetAlias.cag  EHCoreTrfLamLift.cag  EHCoreTrfLetUnrec.cag  EHCoreTrfRenUniq.cag  EHCoreUtils.chs  EHDebug.chs  EHError.cag  EHErrorAbsSyn.cag  EHErrorPretty.cag  EHExtraChecks.cag  EHGam.chs  EHGamUtils.chs  EHGatherError.cag  EHGenCode.cag  (+76 more)
EHC/: .gitignore  ANNOUNCE  ANNOUNCE-1.1.0  EHAbsSyn.cag  EHC.chs  EHCnstr.chs  EHCode.cag  EHCodeAbsSyn.cag  EHCodeJava.cag  EHCodePretty.cag  EHCodeRenameUniq.cag  EHCodeSubst.cag  EHCommon.chs  EHCore.cag  EHCoreGrin.cag  EHCoreJava.cag  EHCorePretty.cag  EHCoreRenameUniq.cag  EHCoreSubst.cag  EHCoreTrfCommonLev.cag  EHCoreTrfFullLazy.cag  EHCoreTrfInlineLetAlias.cag  EHCoreTrfLamLift.cag  EHCoreTrfLetUnrec.cag  EHCoreTrfRenUniq.cag  EHCoreUtils.chs  EHDebug.chs  EHError.cag  EHErrorAbsSyn.cag  EHErrorPretty.cag  EHExtraChecks.cag  EHGam.chs  EHGamUtils.chs  EHGatherError.cag  EHGenCode.cag  EHGenCore.cag  EHInfer.cag  EHInferCaseExpr.cag  EHInferClass.cag  EHInferData.cag  (+65 more)
EHC/agprimer/: Expr.cag  RepminAG.cag  RepminHS.chs  files.mk
EHC/autom4te.cache/: output.0  requests  traces.0
EHC/brew/: Brew.ag
EHC/catests/: Base40.chs  Base90.chs  BaseSplit.chs  BinTree  BinTree.c  BinTreeInlinedMap  BinTreeInlinedMap.c  CollectOpts.sh  CollectTimings.sh  Fact  Fact.c  Fold  Fold.c  Main.c  Main.hs  MainBase  MainOpt  MainOpts  MainOpts.c  MainTime  MainTime.c  MainTime.hs  Mainmas  ParseTimings  ParseTimings.dyn_hi  ParseTimings.dyn_o  ParseTimings.hs  ProcessTimings.sh  Test  Test.c  Test.hs  Tests  Tests.c  Tests.hs  base1-100.chs  base60.chs  base85.chs  base86.chs  debug - kopie.txt  debug.1.txt  (+12 more)
EHC/cmm/: compile  eh.lua  grin.lua
EHC/demo/: copyFile.hs  repmin.hs  standardFunctions.hs
EHC/eh-frags/: 9-eq-nub.eh  9-snd-order1.eh
EHC/ehc/: EHAbsSyn.cag  EHAbsSynAG.cag  EHC.chs  EHCnstr.chs  EHCommon.chs  EHCore.cag  EHCoreAbsSyn.cag  EHCoreCommonLev.cag  EHCoreGrin.cag  EHCoreJava.cag  EHCorePretty.cag  EHCoreTrfCommonFv.cag  EHCoreTrfEtaRed.cag  EHCoreTrfFullLazy.cag  EHCoreTrfLamLift.cag  EHCoreUtils.chs  EHExtraChecks.cag  EHGam.chs  EHGatherError.cag  EHGenCore.cag  EHInfer.cag  EHInferCaseExpr.cag  EHInferClass.cag  EHInferData.cag  EHInferExpr.cag  EHInferKiExpr.cag  EHInferTyExpr.cag  EHMainAG.cag  EHOpts.chs  EHParser.chs  EHPred.chs  EHPretty.cag  EHPrettyAST.cag  EHResolvePred.cag  EHScanner.chs  EHSubstitutable.chs  EHTy.cag  EHTyAbsSyn.cag  EHTyElimAlts.cag  EHTyElimBoth.cag  (+10 more)
EHC/ehclib/: ehclib-ghc-sync-frozen.tgz  files.mk  files1.mk  files2.mk
EHC/extlibs/: files.mk
EHC/figs/: 2a_NWO_LogoBasis_PMS.eps  2b_NWO_LogoBasis_CMYK.eps  ag-ast-asp-ruler-only.fig  ag-ast-asp.fig  agpat-plain-comp.fig  app.fig  conflict-lattice.fig  cycle-case  ehc-pipeline.dot  files.mk  let-I2-flow.fig  list-rep.fig  redGraphEqOrdListTup.dot  redGraphShowTable.dot  redGraphSuperScopeNo.dot  roadmap.fig  ruler-generates.fig  ruler-overview.fig  system-overview.fig  type-lattice.fig  unq-constr-prop2.fig  unq-count-flow.fig  unq-count-flow2.fig  unq-count-flow3.fig  unq-flow.fig  unq-graph.fig  unq-graph2.fig  unq-graph3.fig  unq-graph4.fig  unq-graph5.fig  unq-graph6.fig  unq-lattice.fig  unq-poly.fig  unq-pres-app.fig  unq-pres-ast.fig  unq-pres-coercion.fig  unq-pres-lam.fig  unq-pres-root.fig  unq-versioned-arr.fig  www-logo.psd
EHC/fmt/: afp.fmt  files.mk
EHC/gri/: GRI.chs  GRIParser.chs  GRIRun.chs  GRISetup.cag
EHC/grin/: GrinCode.cag  files.mk
EHC/grinc/: files.mk
EHC/grini/: files.mk
EHC/hcar/: 20090430-UHC.tex  20091117-UHC.tex  20101029-UHC.tex  20110501-UHC.tex  20111101-UHC.tex  20120505-UHC.tex  20131007-UHC.tex  20140507-UHC.tex  20141116-UHC.tex  20150506-UHC.tex  20151116-UHC.tex  UHCUtrechtHaskellCompiler-AU.tex  main.tex
EHC/infer2pass/: Common.chs  Infer2Pass.chs  Infer2PassSupport.chs  MainAG.cag  RulerInfer2Pass.rul  Ty.cag  TyAbsSyn.cag  TyFtv.cag  Utils.hs  files.mk
EHC/install-for-build/: ins-flg-EH-Util  ins-flg-EH101
EHC/latex/: CodeGroup.sty  beamercolorthemeuufancy.sty  beamerouterthemeuufancy.sty  beamerouterthemeuuplain.sty  beamerthemeafp.sty  beamerthemeuu.sty  entcs.cls  geometry.sty  kslayout.sty  sigplan-proc.cls  sigplanconf.cls  svnrev.sty  uubeameroptions.sty  uubeamerversion.sty  uucorporatecolors.sty
EHC/lhs2TeX/: IdentColors.fmt  Javascript.fmt  afp.fmt  ehrules.fmt  experimentsubst.fmt  files.mk  forSubText.fmt  greek_indices.fmt  gvdgeest.fmt  kscode.fmt  more_indices.fmt  oneletter.fmt  parsing.fmt  ruler.fmt  verb.fmt
EHC/lib/: FPath.hs  PPUtils.hs  ParseErrPrettyPrint.hs  ParseUtils.hs  ScanUtils.hs  Utils.hs
EHC/mk/: config.mk  config.mk.in  dist.mk  ehfiles.mk  functions.mk  shared.mk  shared.mk.in  templ-test-dist.mk
EHC/ruler/: Ruler.ag
EHC/ruler1/: Ruler.ag
EHC/ruler2/: ARuleAVarRename.ag  ARuleCopyRuleElim.ag  ARuleElimCopyRule.ag  ARulePatternUniq.ag  ARulePrettyPrint.ag  ARuleRwSubst.ag  ARuleUtils.hs  AttrProps.hs  Common.hs  ECnstrGam.hs  Err.hs  Expr.ag  ExprAbsSynAG.ag  ExprCoGam.ag  ExprLaTeX.ag  ExprLaTeXAG.ag  ExprPrettyPrintAG.ag  ExprReGamExprFmGam.ag  ExprToAEqn.hs  ExprUtils.hs  FmGam.hs  Gam.hs  JdGam.hs  KeywParser.hs  LaTeXFmtUtils.hs  Main1AG.ag  Main2AG.ag  MainAG.ag  Makefile  NmParser.hs  Opts.hs  README  Ruler.ag  Ruler.hs  RulerARule.ag  RulerARuleOptim.ag  RulerARuleOptim2.ag  RulerAS1Gen.ag  RulerAS1GenAS2.ag  RulerAS1SchemeDpd.ag  (+37 more)
EHC/shuffle/: CDoc.ag  CDocAG.ag  CDocCommonAG.ag  CDocInline.ag  ChunkParser.hs  Common.hs  MainAG.ag  Shuffle.ag  Shuffle.hs  files.mk
EHC/src/: files.mk
language-cil/: 01_Hello.hs  04_Branches.hs  06_Types_Tuple.hs  LICENSE  language-cil.cabal  run-example-03.sh
(+5617 files in other folders)
